--- a/.github/workflows/kernel-build.yml
+++ b/.github/workflows/kernel-build.yml
@@ -35,6 +35,8 @@ jobs:
           for i in "${!compilers[@]}"; do   ${compilers[$i]}; done
           compiler_list="${compilers[0]}"
           cd "linux-${{ steps.kernel.outputs.krel }}"
+          wget "https://raw.githubusercontent.com/Neutron-Toolchains/clang-build/main/patches/linux/6.1.6/20221118_yingchi_x86_fpu_Use__Alignof_to_avoid_undefined_behavior_in_TYPE_ALIGN.patch"
+          patch -p1 < "20221118_yingchi_x86_fpu_Use__Alignof_to_avoid_undefined_behavior_in_TYPE_ALIGN.patch"
           hyperfine -w 1 -r 3 -p '(sync; echo 3 | sudo tee /proc/sys/vm/drop_caches) && make distclean' \
             -L compiler ${compiler_list} 'PATH="$HOME/toolchains/{compiler}/bin:${PATH}" 
             LD_LIBRARY_PATH="$HOME/toolchains/{compiler}/lib" make distclean defconfig all -j$(nproc --all) LLVM="$HOME/toolchains/{compiler}/bin" LLVM_IAS=1' -c 'make distclean' \
@@ -70,6 +72,8 @@ jobs:
           for i in "${!compilers[@]}"; do   ${compilers[$i]}; done
           compiler_list="${compilers[0]}"
           cd "linux-${{ steps.kernel.outputs.krel }}"
+          wget "https://raw.githubusercontent.com/Neutron-Toolchains/clang-build/main/patches/linux/6.1.6/20221118_yingchi_x86_fpu_Use__Alignof_to_avoid_undefined_behavior_in_TYPE_ALIGN.patch"
+          patch -p1 < "20221118_yingchi_x86_fpu_Use__Alignof_to_avoid_undefined_behavior_in_TYPE_ALIGN.patch"
           hyperfine -w 1 -r 3 -p '(sync; echo 3 | sudo tee /proc/sys/vm/drop_caches) && make distclean' \
             -L compiler ${compiler_list} 'PATH="$HOME/toolchains/{compiler}/bin:${PATH}" 
             LD_LIBRARY_PATH="$HOME/toolchains/{compiler}/lib" make distclean defconfig all -j$(nproc --all) ARCH=arm64 LLVM="$HOME/toolchains/{compiler}/bin" LLVM_IAS=1' -c 'make distclean' \
@@ -105,6 +109,8 @@ jobs:
           for i in "${!compilers[@]}"; do   ${compilers[$i]}; done
           compiler_list="${compilers[0]}"
           cd "linux-${{ steps.kernel.outputs.krel }}"
+          wget "https://raw.githubusercontent.com/Neutron-Toolchains/clang-build/main/patches/linux/6.1.6/20221118_yingchi_x86_fpu_Use__Alignof_to_avoid_undefined_behavior_in_TYPE_ALIGN.patch"
+          patch -p1 < "20221118_yingchi_x86_fpu_Use__Alignof_to_avoid_undefined_behavior_in_TYPE_ALIGN.patch"
           hyperfine -w 1 -r 3 -p '(sync; echo 3 | sudo tee /proc/sys/vm/drop_caches) && make distclean' \
             -L compiler ${compiler_list} 'PATH="$HOME/toolchains/{compiler}/bin:${PATH}" 
             LD_LIBRARY_PATH="$HOME/toolchains/{compiler}/lib" make distclean defconfig all -j$(nproc --all) ARCH=arm LLVM="$HOME/toolchains/{compiler}/bin" LLVM_IAS=1' -c 'make distclean' \
